First commited as before_39173_rev1