@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2000, 2015 IBM Corporation and others.
+ * Copyright (c) 2000, 2013 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -16,7 +16,6 @@ import java.util.Iterator;
 import java.util.Map;
 import java.util.Set;
 import org.eclipse.core.commands.common.EventManager;
-import org.eclipse.core.runtime.Adapters;
 import org.eclipse.core.runtime.SafeRunner;
 import org.eclipse.e4.core.contexts.IEclipseContext;
 import org.eclipse.e4.ui.model.application.ui.basic.MPart;
@@ -46,6 +45,7 @@ import org.eclipse.ui.PartInitException;
 import org.eclipse.ui.SubActionBars;
 import org.eclipse.ui.internal.WorkbenchPage;
 import org.eclipse.ui.internal.WorkbenchPlugin;
+import org.eclipse.ui.internal.util.Util;
 
 /**
  * Abstract superclass of all multi-page workbench views.
@@ -208,7 +208,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 		/**
 		 * Creates a new page record initialized to the given part and page.
-		 *
+		 * 
 		 * @param part
 		 * @param page
 		 */
@@ -228,7 +228,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 	private static class SelectionManager extends EventManager {
 		/**
-		 *
+		 * 
 		 * @param listener
 		 *            listen
 		 */
@@ -238,7 +238,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 		}
 
 		/**
-		 *
+		 * 
 		 * @param listener
 		 *            listen
 		 */
@@ -248,7 +248,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 		}
 
 		/**
-		 *
+		 * 
 		 * @param event
 		 *            the event
 		 */
@@ -278,12 +278,18 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 		private SelectionManager fPostSelectionListeners = new SelectionManager();
 
+		/*
+		 * (non-Javadoc) Method declared on ISelectionProvider.
+		 */
 		@Override
 		public void addSelectionChangedListener(
 				ISelectionChangedListener listener) {
 			fSelectionListener.addSelectionChangedListener(listener);
 		}
 
+		/*
+		 * (non-Javadoc) Method declared on ISelectionProvider.
+		 */
 		@Override
 		public ISelection getSelection() {
 			// get the selection provider from the current page
@@ -304,6 +310,9 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 			return StructuredSelection.EMPTY;
 		}
 
+		/*
+		 * (non-Javadoc) Method declared on ISelectionProvider.
+		 */
 		@Override
 		public void removeSelectionChangedListener(
 				ISelectionChangedListener listener) {
@@ -313,7 +322,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 		/**
 		 * The selection has changed. Process the event, notifying selection
 		 * listeners and post selection listeners.
-		 *
+		 * 
 		 * @param event
 		 *            the change
 		 */
@@ -323,14 +332,17 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 		/**
 		 * The selection has changed, so notify any post-selection listeners.
-		 *
+		 * 
 		 * @param event
 		 *            the change
 		 */
 		public void postSelectionChanged(final SelectionChangedEvent event) {
-			fPostSelectionListeners.selectionChanged(event);
+			fPostSelectionListeners.selectionChanged(event);			
 		}
 
+		/*
+		 * (non-Javadoc) Method declared on ISelectionProvider.
+		 */
 		@Override
 		public void setSelection(ISelection selection) {
 			// get the selection provider from the current page
@@ -351,12 +363,22 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 			}
 		}
 
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.viewers.IPostSelectionProvider#addPostSelectionChangedListener(org.eclipse.jface.viewers.ISelectionChangedListener)
+		 */
 		@Override
 		public void addPostSelectionChangedListener(
 				ISelectionChangedListener listener) {
 			fPostSelectionListeners.addSelectionChangedListener(listener);
 		}
 
+		/*
+		 * (non-Javadoc)
+		 * 
+		 * @see org.eclipse.jface.viewers.IPostSelectionProvider#removePostSelectionChangedListener(org.eclipse.jface.viewers.ISelectionChangedListener)
+		 */
 		@Override
 		public void removePostSelectionChangedListener(
 				ISelectionChangedListener listener) {
@@ -381,7 +403,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	 * <code>IPageBookViewPage</code>) before calling createControl on the
 	 * page.
 	 * </p>
-	 *
+	 * 
 	 * @param book
 	 *            the pagebook control
 	 * @return the default page
@@ -391,7 +413,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	/**
 	 * Creates a page for a given part. Adds it to the pagebook but does not
 	 * show it.
-	 *
+	 * 
 	 * @param part
 	 *            The part we are making a page for.
 	 * @return IWorkbenchPart
@@ -407,7 +429,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 	/**
 	 * Prepares the page in the given page rec for use in this view.
-	 *
+	 * 
 	 * @param rec
 	 */
 	private void preparePage(PageRec rec) {
@@ -429,14 +451,14 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 			// for backward compability with IPage
 			rec.page.setActionBars(rec.subActionBars);
 
-			count = Integer.valueOf(0);
+			count = new Integer(0);
 		} else {
 			site = (IPageSite) mapPageToSite.get(rec.page);
 			rec.subActionBars = (SubActionBars) site.getActionBars();
 			count = ((Integer) mapPageToNumRecs.get(rec.page));
 		}
 
-		mapPageToNumRecs.put(rec.page, Integer.valueOf(count.intValue() + 1));
+		mapPageToNumRecs.put(rec.page, new Integer(count.intValue() + 1));
 	}
 
 	/**
@@ -448,7 +470,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	 * <p>
 	 * Subclasses may override
 	 * </p>
-	 *
+	 * 
 	 * @param page
 	 *            The page to initialize
 	 */
@@ -525,7 +547,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	 * <code>IPageBookViewPage</code>) before calling createControl on the
 	 * page.
 	 * </p>
-	 *
+	 * 
 	 * @param part
 	 *            the input part
 	 * @return the record describing a new page for this view
@@ -539,7 +561,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	 * <p>
 	 * Subclasses must implement this method.
 	 * </p>
-	 *
+	 * 
 	 * @param part
 	 *            the input part
 	 * @param pageRecord
@@ -551,7 +573,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 	/**
 	 * Returns true if the page has already been created.
-	 *
+	 * 
 	 * @param page
 	 *            the page to test
 	 * @return true if this page has already been created.
@@ -566,10 +588,10 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	 * implements <code>IAdaptable</code>.
 	 */
 	@Override
-	public <T> T getAdapter(Class<T> key) {
+	public Object getAdapter(Class key) {
 		// delegate to the current page, if supported
 		IPage page = getCurrentPage();
-		T adapter = Adapters.adapt(page, key);
+		Object adapter = Util.getAdapter(page, key);
 		if (adapter != null) {
 			return adapter;
 		}
@@ -591,14 +613,14 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	 * The default implementation returns <code>null</code>. Subclasses may
 	 * override.
 	 * </p>
-	 *
+	 * 
 	 * @param adapter
 	 *            the adapter class to look up
 	 * @return a object castable to the given class, or <code>null</code> if
 	 *         this object does not have an adapter for the given class
 	 * @since 3.2
 	 */
-	protected <T> T getViewAdapter(Class<T> adapter) {
+	protected Object getViewAdapter(Class adapter) {
 		return null;
 	}
 
@@ -616,14 +638,14 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	 * <p>
 	 * Subclasses must implement this method.
 	 * </p>
-	 *
+	 * 
 	 * @return the active important part, or <code>null</code> if none
 	 */
 	protected abstract IWorkbenchPart getBootstrapPart();
 
 	/**
 	 * Returns the part which contributed the current page to this view.
-	 *
+	 * 
 	 * @return the part which contributed the current page or <code>null</code>
 	 *         if no part contributed the current page
 	 */
@@ -637,7 +659,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	/**
 	 * Returns the currently visible page for this view or <code>null</code>
 	 * if no page is currently visible.
-	 *
+	 * 
 	 * @return the currently visible page
 	 */
 	public IPage getCurrentPage() {
@@ -649,7 +671,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 	/**
 	 * Returns the view site for the given page of this view.
-	 *
+	 * 
 	 * @param page
 	 *            the page
 	 * @return the corresponding site, or <code>null</code> if not found
@@ -660,7 +682,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 	/**
 	 * Returns the default page for this view.
-	 *
+	 * 
 	 * @return the default page
 	 */
 	public IPage getDefaultPage() {
@@ -669,7 +691,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 	/**
 	 * Returns the pagebook control for this view.
-	 *
+	 * 
 	 * @return the pagebook control, or <code>null</code> if not initialized
 	 */
 	protected PageBook getPageBook() {
@@ -678,7 +700,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 	/**
 	 * Returns the page record for the given part.
-	 *
+	 * 
 	 * @param part
 	 *            the part
 	 * @return the corresponding page record, or <code>null</code> if not
@@ -690,7 +712,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 	/**
 	 * Returns the page record for the given page of this view.
-	 *
+	 * 
 	 * @param page
 	 *            the page
 	 * @return the corresponding page record, or <code>null</code> if not
@@ -712,7 +734,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	 * <p>
 	 * Subclasses must implement this method.
 	 * </p>
-	 *
+	 * 
 	 * @param part
 	 *            the input part
 	 * @return <code>true</code> if the part is relevant, and
@@ -720,6 +742,9 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	 */
 	protected abstract boolean isImportant(IWorkbenchPart part);
 
+	/*
+	 * (non-Javadoc) Method declared on IViewPart.
+	 */
 	@Override
 	public void init(IViewSite site) throws PartInitException {
 		site.setSelectionProvider(selectionProvider);
@@ -803,6 +828,11 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 		// Do nothing.
 	}
 
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see org.eclipse.ui.IPartListener#partOpened(org.eclipse.ui.IWorkbenchPart)
+	 */
 	@Override
 	public void partOpened(IWorkbenchPart part) {
 		// Do nothing by default.
@@ -833,7 +863,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	/**
 	 * Removes a page record. If it is the last reference to the page dispose of
 	 * it - otherwise just decrement the reference count.
-	 *
+	 * 
 	 * @param rec
 	 * @param doDestroy
 	 *            if <code>true</code>, also call
@@ -872,10 +902,13 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 				((PageSite) site).dispose();
 			}
 		} else {
-			mapPageToNumRecs.put(rec.page, Integer.valueOf(newCount));
+			mapPageToNumRecs.put(rec.page, new Integer(newCount));
 		}
 	}
 
+	/*
+	 * (non-Javadoc) Method declared on IWorkbenchPart.
+	 */
 	@Override
 	public void setFocus() {
 		// first set focus on the page book, in case the page
@@ -891,7 +924,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 	/**
 	 * Handle page selection changes.
-	 *
+	 * 
 	 * @param event
 	 */
 	private void pageSelectionChanged(SelectionChangedEvent event) {
@@ -905,7 +938,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 	/**
 	 * Handle page selection changes.
-	 *
+	 * 
 	 * @param event
 	 */
 	private void postSelectionChanged(SelectionChangedEvent event) {
@@ -935,7 +968,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 	 * pagebook control to show the given page's control, and records that the
 	 * given page is now current. Subclasses may extend.
 	 * </p>
-	 *
+	 * 
 	 * @param pageRec
 	 *            the page record containing the page to show
 	 */
@@ -1025,13 +1058,13 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 	/**
 	 * Returns the selectionProvider for this page book view.
-	 *
+	 * 
 	 * @return a SelectionProvider
 	 */
 	protected SelectionProvider getSelectionProvider() {
 		return selectionProvider;
 	}
-
+	
 	private IPartListener2 partListener = new IPartListener2() {
 		@Override
 		public void partActivated(IWorkbenchPartReference partRef) {
@@ -1125,7 +1158,7 @@ public abstract class PageBookView extends ViewPart implements IPartListener {
 
 	/**
 	 * Make sure that the part is not considered if it is hidden.
-	 *
+	 * 
 	 * @param part
 	 * @since 3.5
 	 */
