@@ -114,8 +114,11 @@ public class SWTObservablesTest extends AbstractSWTTestCase {
 	}
 
 	@Override
-	protected Shell createShell() {
-		return new Shell(SWT.V_SCROLL);
+	protected Shell getShell() {
+		if (shell == null) {
+			shell = new Shell(SWT.V_SCROLL);
+		}
+		return shell;
 	}
 
 	public void testObserveForeground() throws Exception {
@@ -395,7 +398,7 @@ public class SWTObservablesTest extends AbstractSWTTestCase {
 		ISWTObservableValue value = WidgetProperties.singleSelectionIndex()
 				.observe(cCombo);
 		assertEquals(0, cCombo.getSelectionIndex());
-		value.setValue(Integer.valueOf(-1));
+		value.setValue(new Integer(-1));
 		assertEquals(-1, cCombo.getSelectionIndex());
 	}
 
@@ -421,7 +424,7 @@ public class SWTObservablesTest extends AbstractSWTTestCase {
 		ISWTObservableValue value = WidgetProperties.singleSelectionIndex()
 				.observe(combo);
 		assertEquals(0, combo.getSelectionIndex());
-		value.setValue(Integer.valueOf(-1));
+		value.setValue(new Integer(-1));
 		assertEquals(-1, combo.getSelectionIndex());
 	}
 
@@ -447,7 +450,7 @@ public class SWTObservablesTest extends AbstractSWTTestCase {
 		ISWTObservableValue value = WidgetProperties.singleSelectionIndex()
 				.observe(list);
 		assertEquals(0, list.getSelectionIndex());
-		value.setValue(Integer.valueOf(-1));
+		value.setValue(new Integer(-1));
 		assertEquals(-1, list.getSelectionIndex());
 	}
 
@@ -473,7 +476,7 @@ public class SWTObservablesTest extends AbstractSWTTestCase {
 		ISWTObservableValue value = WidgetProperties.singleSelectionIndex()
 				.observe(table);
 		assertEquals(0, table.getSelectionIndex());
-		value.setValue(Integer.valueOf(-1));
+		value.setValue(new Integer(-1));
 		assertEquals(-1, table.getSelectionIndex());
 	}
 
